se agrega sombra mensaje no ha seleccionado solucion

--- a/include/calculadora/index.html
+++ b/include/calculadora/index.html
@@ -272,7 +272,7 @@
                       </div>
                       <div class="col-12 col-sm-4 mt-4 mt-sm-0">
                         <label class="form-check-label" for="flexCheckDefault"
-                          style="background-color: red; color: white; text-align: center; border: wheat; border-radius: 5px;">NO
+                          style="background-color: red; color: white; text-align: center; border: wheat; border-radius: 5px; box-shadow: 0px 0px 5px 1px black; padding: 5px;">NO
                           HA SELECCIONADO UNA SOLUCIÓN</label>
 
                       </div>
@@ -400,7 +400,7 @@
                 <!-- Inicio cuarto paso -->
 
                 <div class="multisteps-form__panel shadow p-4 rounded bg-white" data-animation="scaleIn">
-                  <h3 class="multisteps-form__title">Volumetria Estimada</h3>
+                  <h3 class="multisteps-form__title" style="text-align: center;">Volumetria Estimada</h3>
                   <div class="multisteps-form__content">
 
                     <div class="form-row mt-4">
