--- a/include/calculadora/index.html
+++ b/include/calculadora/index.html
@@ -44,30 +44,30 @@
                 <div class="multisteps-form__content">
                   <div class="form-row mt-4">
                     <div class="col-12 col-sm-6">
-                      <input class="multisteps-form__input form-control" type="text" placeholder="Nombre Contacto"/>
+                      <input class="multisteps-form__input form-control" type="text" id="nombre_contacto" placeholder="Nombre Contacto"/>
                     </div>
                     <div class="col-12 col-sm-6 mt-4 mt-sm-0">
-                      <input class="multisteps-form__input form-control" type="text" placeholder="Nombre Empresa"/>
+                      <input class="multisteps-form__input form-control" type="text" id="nombre_empresa" placeholder="Nombre Empresa"/>
                     </div>
                   </div>
                   <div class="form-row mt-4">
                     <div class="col-12 col-sm-6">
-                      <input class="multisteps-form__input form-control" type="text" placeholder="Rut Empresa"/>
+                      <input class="multisteps-form__input form-control" type="text" id="rut_empresa" placeholder="Rut Empresa"/>
                     </div>
                     <div class="col-12 col-sm-6 mt-4 mt-sm-0">
-                      <input class="multisteps-form__input form-control" type="email" placeholder="Email Contacto"/>
+                      <input class="multisteps-form__input form-control" type="email" id="email_empresa" placeholder="Email Contacto"/>
                     </div>
                   </div>
                   <div class="form-row mt-4">
                     <div class="col-12 col-sm-6">
-                      <input class="multisteps-form__input form-control" type="text" placeholder="Teléfono Contacto"/>
+                      <input class="multisteps-form__input form-control" type="text" id="telefono" placeholder="Teléfono Contacto"/>
                     </div>
                     <div class="col-12 col-sm-6 mt-4 mt-sm-0">
-                      <select class="multisteps-form__select form-control">
-                        <option selected="selected">País</option>
-                        <option>Chile</option>
-                        <option>Perú</option>
-                        <option>Colombia</option>
+                      <select class="multisteps-form__select form-control" id="pais">
+                        <option value="" selected="selected">País</option>
+                        <option value="Chile">Chile</option>
+                        <option value="Perú">Perú</option>
+                        <option value="Colombia">Colombia</option>
                       </select>
                     </div>
                   </div>
