--- a/include/calculadora/index.html
+++ b/include/calculadora/index.html
@@ -59,7 +59,7 @@
                     </div>
                     <div class="form-row mt-4">
                       <div class="col-12 col-sm-6">
-                        <input class="multisteps-form__input form-control" name="rut_empresa" type="text" placeholder="Rut / Dni" />
+                        <input class="multisteps-form__input form-control" name="rut" type="text" placeholder="Rut / Dni" />
                       </div>
                       <div class="col-12 col-sm-6 mt-4 mt-sm-0">
                         <input class="multisteps-form__input form-control" name="email" type="email" placeholder="Email Contacto" />
