se mejora click to call

--- a/include/calculadora/index.html
+++ b/include/calculadora/index.html
@@ -22,8 +22,7 @@
     <header class="header">
       <h1 class="header__title">¿Que productos desea simular?</h1>
     </header>
-    <div class="content">
-      <div class="container overflow-hidden">
+          <div class="container overflow-hidden">
         <div class="multisteps-form">
           <div class="row">
             <div class="col-12 col-lg-8 ml-auto mr-auto mb-4">
@@ -90,7 +89,7 @@
                 <!-- Inicio segundo paso -->
 
                 <div class="multisteps-form__panel shadow p-4 rounded bg-white" data-animation="scaleIn">
-                  <h3 class="multisteps-form__title" style="text-align: center;">Configura Tu Solución</h3>
+                  <h3 class="multisteps-form__title" style="text-align: center;">Selecciona Tu Solución</h3>
                   <div class="multisteps-form__content">
 
                     <div class="form-row mt-4">
@@ -439,11 +438,26 @@
 
         </div>
       </div>
+
     </div>
   </div>
 
   <script src="js/main.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/js/bootstrap4-toggle.min.js"></script>
+
+<!-- mensaje de despedida -->
+
+<div class="card text-center" id="despedida">
+  <div class="card-header">
+    PEOPLEBPO
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">Don/Doña<span id="despedida_nombre"></span></h5>
+    <p class="card-text">Su solicitud de simulación ha sido procesada correctamente.</p>
+    <p class="card-text">Para más información escribanos a info@peoplebpo.com. Gracias.</p>
+  </div>
+
+</div>
 
 </body>
 
