se agrego ingreso de datos basico hacia la base de datos

--- a/include/calculadora/index.html
+++ b/include/calculadora/index.html
@@ -70,8 +70,8 @@
                         <input class="multisteps-form__input form-control" id="telefono" name="telefono" type="number" placeholder="Teléfono Contacto" />
                       </div>
                       <div class="col-12 col-sm-6 mt-4 mt-sm-0">
-                        <select class="multisteps-form__select form-control" id="pais">
-                        <option value="" selected="selected">País</option>
+                        <select class="multisteps-form__select form-control" id="pais" name="pais">
+                        <option value="" selected="selected">País</option> 
                         <option value="Chile">Chile</option>
                         <option value="Perú">Perú</option>
                         <option value="Colombia">Colombia</option>
