--- a/include/calculadora/css/main.css
+++ b/include/calculadora/css/main.css
@@ -7,7 +7,7 @@
 
 body {
   font-family: 'Poppins', sans-serif;
-  font-size: 16px;
+  font-size: 14px;
   color: #2c2c2c;
 }
 body a {
@@ -185,9 +185,15 @@ body a {
 }
 
 .container {
-  max-width: 1000px;
+  max-width: 950px;
 }
 
 .fa-question-circle{
   margin-left: 5px;
+}
+
+.bloques mt-4{
+
+  margin-top: 0 !important;
+
 }
