se replico a los 3 paises

--- a/include/calculadora/index.html
+++ b/include/calculadora/index.html
@@ -89,7 +89,7 @@
                       <select class="multisteps-form__select form-control" id="pais" name="pais">
                         <option value="" selected="selected">País</option>
                         <option value="Chile">Chile</option>
-                        <option value="Perú">Perú</option>
+                        <option value="Peru">Perú</option>
                         <option value="Colombia">Colombia</option>
                       </select>
                     </div>
